Finalizado Unidade 01 - SVG e Canvas

--- a/unidade02/ex01_svg.html
+++ b/unidade02/ex01_svg.html
@@ -1,12 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Curso HTML5 Avançado</title>
-    </head>
-    
-    <body>
-	
-    
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Curso HTML5 Avançado</title>
+    <style>
+      body {
+        margin: 0;
+      }
+      svg {
+        background-color: darkgray;
+        width: 300px;
+        height: 300px;
+      }
+    </style>
+  </head>
+
+  <body>
+    <svg>
+      <circle cx="60" cy="60" r="50" fill="#f00"></circle>
+      <circle cx="150" cy="150" r="50" fill="#f00" stroke="#000"></circle>
+      <circle
+        cx="230"
+        cy="230"
+        r="50"
+        fill="#f00"
+        stroke="#000"
+        stroke-width="5"
+      ></circle>
+    </svg>
+  </body>
 </html>
