--- a/unidade02/ex04_svg.html
+++ b/unidade02/ex04_svg.html
@@ -22,7 +22,10 @@
     
     <body>
         <svg height="500" width="500">
-            
+            <polygon points="173,182 319,182 246,38" fill="tomato" />
+            <polygon points="200,200 300,350 400,200 300,50" fill="steelblue" />
+            <polygon points="90,15 150,15 190,75 150,135 90,135 50,75" fill="#2fbd0c" />
+            <polygon points="38,166 16,236 76,188 5,188 60,236" fill="#b4464c" />
         </svg>	
 	</body>
 </html>
