--- a/unidade04/exercicio02/index.html
+++ b/unidade04/exercicio02/index.html
@@ -30,7 +30,7 @@
 
     <body>
     	<section id="video">
-
+            <video controls src="../video/sintel.mp4" width="482" height="271"></video>
     	</section>
         
         <footer>
