--- a/unidade04/exercicio04/index.html
+++ b/unidade04/exercicio04/index.html
@@ -31,7 +31,8 @@
 
     <body>
     	<section id="video">
-
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fkLRfH7Ru2A"
+                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     	</section>
         
         <footer>
