--- a/unidade03/ex02_recebendo_coordenadas.html
+++ b/unidade03/ex02_recebendo_coordenadas.html
@@ -47,9 +47,10 @@
                     geoloc.getCurrentPosition( retornarPosicao, retornarFalha );
                 }
                 
-                function retornarPosicao() {
-                    var mensagem = "Sucesso! Foi possível identificar sua posição"; 
-                    document.getElementById("status").innerHTML = mensagem;
+                function retornarPosicao(posicao) {
+					let latitude = posicao.coords.latitude;
+					let longitude = posicao.coords.longitude;
+                    document.getElementById("status").innerHTML = "Latitude: " + latitude + " Longitude: " + longitude;
                 }
                 
                 function retornarFalha() {
