--- a/unidade03/ex03_melhorar_mensagem_de_erro.html
+++ b/unidade03/ex03_melhorar_mensagem_de_erro.html
@@ -53,8 +53,21 @@
                     document.getElementById("status").innerHTML = "Latitude: " + latitude + " Longitude: " + longitude;
                 }
                 
-                function retornarFalha() {
-                    var mensagem = "Falha! Não foi possível identificar sua posição";
+                function retornarFalha(erro) {
+					let mensagem = "";
+					switch (erro.code) {
+						case erro.PERMISSION_DENIED:
+							mensagem = "Acesso a localização está bloqueado."
+							break;
+						case erro.POSITION_UNAVAILABLE:
+							mensagem = "Sua localização está indisponivel.";
+							break;
+						case erro.TIMEOUT:
+							mensagem = "Indisponivel no momento.";
+						default:
+							mensagem = "Sua localização está indisponivél no momento.";
+							break;
+					}
                     document.getElementById("status").innerHTML = mensagem;
                 }
 			}
