--- a/unidade04/exercicio03/index.html
+++ b/unidade04/exercicio03/index.html
@@ -26,11 +26,15 @@
                 text-align:center;
             }
         </style>
+        <script src="includes/videosub.js"></script>
 	</head>
 
     <body>
     	<section id="video">
-            <video controls width="483" height="272" src="../video/sintel.mp4"></video>
+            <video controls poster="sintel.jpg" width="483" height="272">
+                <source src="../video/sintel.mp4" type="video/mp4" />
+                <track src="sintel_pt.srt" srclang="pt-BR" kind="subtitles" label="Portugûes"/>
+            </video>
     	</section>
         
         <footer>
